--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section>
+        <div class="skew1">
+            <h2>Corner Text</h2>
+        </div>
+        <div class="textBox">
+            <div class="skew2">
+                <h2>Corner Text</h2>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
